# structscan

./: .gitignore  KERNEL_DEBUG.md  Main.c  Main.h  README.md  Testing.md  build.bat  structscan.vcxproj
MyCustomApp_Example/: CMakeLists.txt  main.cpp
